infrastructure/kubernetes/tenants/keycloak/keycloak-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: keycloak-redirect
  namespace: keycloak
spec:
  redirectRegex:
    regex: "^https://identity.smallworlds.network/?$"
    replacement: "https://identity.smallworlds.network/realms/smallworlds/account/"
